# EAIS

./: .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  Dockerfile.ui  PROFESSIONAL_USAGE_GUIDE.md  README.md  SYSTEM_REVIEW.md  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  run_full_system.py  run_streamlit_app.py  start_eais.bat  start_eais.sh  test_api.py  test_orchestrator.py
docs/: CREW_PY_REMOVAL_SUMMARY.md  DOCUMENTATION_UPDATES.md  ENHANCEMENT_SUMMARY.md  ERRORS_AND_SOLUTIONS.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  STREAMLIT_IMPLEMENTATION_SUMMARY.md
docs/wiki/: AI-Agent-Specifications.md  Architecture-Design.md  Business-Impact-Modeling.md  Compliance-Framework.md  Home.md  Installation-and-Setup.md
scripts/: publish_wiki.ps1
src/enhanced_enterprise_architecture_intelligence_system_e_eais/: __init__.py  app.py  init.py  main.py
src/enhanced_enterprise_architecture_intelligence_system_e_eais/agents/: __init__.py  architecture_agent.py  base_agent.py  business_agent.py  compliance_agent.py
src/enhanced_enterprise_architecture_intelligence_system_e_eais/api/: __init__.py  server.py
src/enhanced_enterprise_architecture_intelligence_system_e_eais/config/: agents.yaml  tasks.yaml
src/enhanced_enterprise_architecture_intelligence_system_e_eais/core/: __init__.py  orchestrator.py
src/enhanced_enterprise_architecture_intelligence_system_e_eais/data/: __init__.py  knowledge_graph.py
src/enhanced_enterprise_architecture_intelligence_system_e_eais/tools/: artifact_generation_tool.py  base_tool.py  (+1 more)
(+33 files in other folders)
