[project]
name = "enhanced_enterprise_architecture_intelligence_system_e_eais"
version = "0.1.0"
description = "enhanced_enterprise_architecture_intelligence_system_e_eais using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
enhanced_enterprise_architecture_intelligence_system_e_eais = "enhanced_enterprise_architecture_intelligence_system_e_eais.main:run"
run_crew = "enhanced_enterprise_architecture_intelligence_system_e_eais.main:run"
train = "enhanced_enterprise_architecture_intelligence_system_e_eais.main:train"
replay = "enhanced_enterprise_architecture_intelligence_system_e_eais.main:replay"
test = "enhanced_enterprise_architecture_intelligence_system_e_eais.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
